--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   
   <title>Frontend Mentor | Four card feature section</title>
+  <link rel="stylesheet" href="styles.css">
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
@@ -15,31 +16,57 @@
   </style>
 </head>
 <body>
-  
-  Reliable, efficient delivery
-  Powered by Technology
 
-  Our Artificial Intelligence powered tools use millions of project data points 
-  to ensure that your project is successful
+  <main>
+    <article class="container">
+      <header>
+        <h2 class="sub-heading">Reliable, efficient delivery</h2>
+        <h1>Powered by Technology</h1>
+        <p>Our Artificial Intelligence powered tools use millions of project data points to ensure that your project is successful</p>
+      </header>
 
-  Supervisor
-  Monitors activity to identify project roadblocks
+      <div class="card card--cyan">
+        <h2 class="card__title">Supervisor</h2>
+        <p class="card__desc">Monitors activity to identify project roadblocks</p>
+        <div class="icon__container">
+          <img src="./images/icon-supervisor.svg" alt="supervisor magnifying glass" class="card__icon">
+        </div>
+      </div>
 
-  Team Builder
-  Scans our talent network to create the optimal team for your project
+      <div class="card card--red">
+        <h2 class="card__title">Team Builder</h2>
+        <p class="card__desc">Scans our talent network to create the optimal team for your project</p>
+        <div class="icon__container">
+          <img src="./images/icon-team-builder.svg" alt="Team Builder" class="card__icon">
+        </div>
+      </div>
 
-  Karma
-  Regularly evaluates our talent to ensure quality
+      <div class="card card--orange">
+        <h2 class="card__title">Karma</h2>
+        <p class="card__desc">Regularly evaluates our talent to ensure quality</p>
+        <div class="icon__container">
+          <img src="./images/icon-karma.svg" alt="Karma" class="card__icon">
+        </div>
+        
+      </div>
 
-  Calculator
-  Uses data from past projects to provide better delivery estimates
+      <div class="card card--blue">
+        <h2 class="card__title">Calculator</h2>
+        <p class="card__desc">Uses data from past projects to provide better delivery estimates</p>
+        <div class="icon__container">
+          <img src="./images/icon-calculator.svg" alt="Calculator" class="card__icon">
+        </div>
+      </div>
+      
+      <footer>
+          <p class="attribution">
+            Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+            Coded by <a href="https://www.chrismulvany.com">Chris Mulvany</a>.
+          </p>
+        </footer>
+    </article>  
+</main>
 
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+
 </body>
 </html>
